--- a/consultation.html
+++ b/consultation.html
@@ -10,15 +10,16 @@
 </head>
 <body>
   <header>
-    <nav class="navbar">
-      <h1 class="logo">DAYODMAN</h1>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="consultation.html" class="active">Consultation</a></li>
-      </ul>
-    </nav>
+   <nav class="navbar">
+  <h1 class="logo">DAYODMAN</h1>
+  <div class="menu-toggle" id="menuToggle">&#9776;</div>
+  <ul class="nav-links" id="navLinks">
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="consultation.html">Consultation</a></li>
+  </ul>
+</nav>
   </header>
 
   <section class="content-section">
